--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,19 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="xanhbiennhat">#E3F6F5</color>
+
+    <color name="xanhbiendam">#BAE8E8</color>
+
+    <color name="xanhduongdam">#272343</color>
+
+    <color name="vang">#FFFF00</color>
+
+    <color name="Do">#FF0000</color>
+
+    <color name="XanhLa">#00FF00</color>
+
+    <color name="XanhDuong">#0000FF</color>
+
+    <color name="xanhbienvui">#3098E4</color>
 </resources>
