--- a/app/src/main/res/layout/activity_thanh_toan_sau.xml
+++ b/app/src/main/res/layout/activity_thanh_toan_sau.xml
@@ -41,6 +41,7 @@ Thời hạn còn lại là 11 ngày 21 giờ(Hãy thanh toán trước 24h trư
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="25dp"
+        android:textColor="@color/black"
         android:textStyle="bold"
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="20dp"
@@ -75,6 +76,7 @@ Thời hạn còn lại là 11 ngày 21 giờ(Hãy thanh toán trước 24h trư
         android:layout_height="170dp"
         android:layout_marginHorizontal="20dp"
         android:background="@color/xanhbiennhat"
+        android:textColor="@color/black"
         android:text="FNKEOWQ"
         android:textStyle="bold"
         android:textSize="45dp"
