--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,6 +55,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <EditText
+            android:inputType="textPassword"
             android:id="@+id/edtPasswordLogin"
             android:layout_marginHorizontal="20dp"
             android:backgroundTint="@color/white"
