--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -29,6 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <EditText
+            android:inputType="textEmailAddress"
             android:id="@+id/edtEmail"
             android:hint="example@gmail.com"
             android:layout_marginHorizontal="20dp"
@@ -45,6 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <EditText
+            android:inputType="textPassword"
             android:id="@+id/edtPassword1"
             android:layout_marginHorizontal="20dp"
             android:backgroundTint="@color/white"
@@ -60,6 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <EditText
+            android:inputType="textPassword"
             android:id="@+id/edtPassword2"
             android:layout_marginHorizontal="20dp"
             android:backgroundTint="@color/white"
@@ -75,6 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <EditText
+            android:inputType="phone"
             android:id="@+id/edtSDT"
             android:layout_marginHorizontal="20dp"
             android:backgroundTint="@color/white"
@@ -110,6 +114,7 @@
             android:layout_height="wrap_content">
 
             <EditText
+                android:inputType="date"
                 android:id="@+id/edtNgaySinh"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
