--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -127,6 +127,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="220dp">
                 <Button
+                    android:id="@+id/btnSearch"
                     android:text="Search"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
