--- a/app/src/main/res/layout/fragment_booking.xml
+++ b/app/src/main/res/layout/fragment_booking.xml
@@ -30,106 +30,111 @@
                 android:gravity="center"
                 android:text="Tìm kiếm chuyến bay" />
         </LinearLayout>
-
         <LinearLayout
+            android:background="@color/teal_200"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="70dp"
-            android:background="#222345"
             android:orientation="vertical"
-            android:layout_width="wrap_content"
+            android:layout_width="350dp"
             android:layout_height="wrap_content">
             <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:textColor="@color/white"
-                    android:textSize="20dp"
-                    android:text="From"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-                <TextView
-                    android:textColor="@color/white"
-                    android:textSize="20dp"
-                    android:layout_marginLeft="50dp"
-                    android:text="Ngày bắt đầu"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <View
-                    android:layout_width="210dp"
-                    android:layout_height="1dp"
-                    android:background="@android:color/black" />
-            </LinearLayout>
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <EditText
-                    android:textColor="@color/white"
-                    android:textSize="20dp"
-                    android:layout_width="90dp"
-                    android:layout_height="wrap_content"/>
-                <EditText
-                    android:textColor="@color/white"
-                    android:textSize="20dp"
-                    android:layout_marginLeft="35dp"
-                    android:layout_width="90dp"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:textColor="@color/white"
-                    android:textSize="20dp"
-                    android:text="To"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-                <TextView
-                    android:textColor="@color/white"
-                    android:textSize="20dp"
-                    android:layout_marginLeft="50dp"
-                    android:text="Ngày kết thúc"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <View
-                    android:layout_width="210dp"
-                    android:layout_height="1dp"
-                    android:background="@android:color/black" />
-            </LinearLayout>
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <EditText
-                    android:textSize="20dp"
-                    android:layout_width="90dp"
-                    android:layout_height="wrap_content"/>
-                <EditText
-                    android:textSize="20dp"
-                    android:layout_marginLeft="35dp"
-                    android:layout_width="90dp"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
-            <LinearLayout
+                android:background="#222345"
                 android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="220dp">
-                <Button
-                    android:text="Search"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:textColor="@color/white"
+                        android:textSize="20dp"
+                        android:text="From"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:textColor="@color/white"
+                        android:textSize="20dp"
+                        android:layout_marginLeft="50dp"
+                        android:text="Ngày bắt đầu"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <View
+                        android:layout_width="210dp"
+                        android:layout_height="1dp"
+                        android:background="@android:color/black" />
+                </LinearLayout>
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:textColor="@color/white"
+                        android:textSize="20dp"
+                        android:layout_width="90dp"
+                        android:layout_height="wrap_content"/>
+                    <EditText
+                        android:textColor="@color/white"
+                        android:textSize="20dp"
+                        android:layout_marginLeft="35dp"
+                        android:layout_width="90dp"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:textColor="@color/white"
+                        android:textSize="20dp"
+                        android:text="To"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:textColor="@color/white"
+                        android:textSize="20dp"
+                        android:layout_marginLeft="50dp"
+                        android:text="Ngày kết thúc"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <View
+                        android:layout_width="210dp"
+                        android:layout_height="1dp"
+                        android:background="@android:color/black" />
+                </LinearLayout>
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:textSize="20dp"
+                        android:layout_width="90dp"
+                        android:layout_height="wrap_content"/>
+                    <EditText
+                        android:textSize="20dp"
+                        android:layout_marginLeft="35dp"
+                        android:layout_width="90dp"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="220dp">
+                    <Button
+                        android:text="Search"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
