--- a/app/src/main/res/layout/activity_nhap_thong_tin.xml
+++ b/app/src/main/res/layout/activity_nhap_thong_tin.xml
@@ -5,7 +5,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".profile">
+    tools:context=".NhapThongTinActivity">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/xanhbiennhat">
+        <ImageButton
+            android:id="@+id/btnBack_ThanhToan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@color/xanhbiennhat"
+            android:layout_margin="25dp"
+            android:src="@drawable/baseline_arrow_back_24" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Nhập Thông Tin"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            android:textAlignment="gravity"
+            android:gravity="center"
+            android:paddingRight="20dp"/>
+    </LinearLayout>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -13,6 +34,7 @@
         android:textSize="30dp" />
 
     <EditText
+        android:background="@drawable/borde_hinh_vuong"
         android:id="@+id/editText1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,6 +48,7 @@
         android:textSize="16sp" />
 
     <EditText
+        android:background="@drawable/borde_hinh_vuong"
         android:id="@+id/editText2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -39,6 +62,7 @@
         android:textSize="16sp" />
 
     <EditText
+        android:background="@drawable/borde_hinh_vuong"
         android:id="@+id/editText3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -52,6 +76,7 @@
         android:textSize="16sp" />
 
     <EditText
+        android:background="@drawable/borde_hinh_vuong"
         android:id="@+id/editText4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -65,6 +90,7 @@
         android:textSize="16sp" />
 
     <EditText
+        android:background="@drawable/borde_hinh_vuong"
         android:id="@+id/editText5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
